# chris

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  connect.bat  connect.ps1  connect.sh  run.ps1  run.sh  setup.ps1  setup.sh
.github/workflows/: ci.yml  release.yml
companiond/: Cargo.toml  README.md  build.rs  tauri.conf.json
companiond/capabilities/: default.json
companiond/src/: main.rs
companiond/ui/: blob.js  dog-rive.js  index.html  popup.css  popup.html  popup.js  pr.css  pr.html  pr.js  style.css
companiond/ui/sprites/dog/: DOG_RIVE.md  README.md
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs
crates/hook/: Cargo.toml
crates/hook/src/: main.rs
crates/hook/tests/: e2e.rs
crates/transport-ipc/: Cargo.toml
crates/transport-ipc/src/: lib.rs
docs/: sprite-brief.md
scripts/: connect.ps1  connect.sh  run.bat  run.ps1  run.sh  setup.bat  setup.ps1  setup.sh
