# O daemon do CHRIS: app Tauri que mostra o blob na tela e um ícone na bandeja.
# É uma das "bordas" (usa o sistema operacional), então é `std` normal — só
# compila/roda numa máquina com webview (Windows/macOS/Linux com desktop).
[package]
name = "companiond"
version = "0.1.0"
edition = "2021"
description = "CHRIS daemon: blob na bandeja + janela transparente (Tauri v2)."

[build-dependencies]
# gera código de suporte do Tauri a partir do tauri.conf.json
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: ícone na bandeja do sistema.
# image-png: permite usar nosso ícone PNG na bandeja.
tauri = { version = "2", features = ["tray-icon", "image-png"] }

# o cérebro portável (M0) e o transporte IPC (M2)
chris-core = { path = "../crates/core" }
chris-transport-ipc = { path = "../crates/transport-ipc" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
