# Integração com o GitHub: descobre PRs esperando sua revisão e permite aprovar.
# A lógica de parsing/diff é pura (testável); só o fetch/approve usam rede.
[package]
name = "chris-github"
version = "0.1.0"
edition = "2021"
description = "Notificações de Pull Request do CHRIS (polling da API do GitHub)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
